--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
-<%= link_to "<<Back to Articles List", articles_path %>
-
+<%= link_to "<< Back to Articles List", articles_path %>
+<%= link_to "delete", article_path, :method => :delete, :data => {:confirm =>'are you sure you want to delete it?'} %>
+<%= link_to "edit", edit_article_path(@article) %>
