--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for(@article) do |f| %>
+<%= form_for(@article, html: { multipart: true } ) do |f| %>
   <ul>
     <% @article.errors.full_messages.each do |error| %>
       <li><%= error %></li>
@@ -17,6 +17,15 @@
     <%= f.label :tag_list %><br />
     <%= f.text_field :tag_list %>
   </p>
+<p>
+  <% if @article.image.exists? %>
+    <%= image_tag @article.image.url(:medium) %>
+  <% end %>
+</p>
+  <p>
+    <%= f.label :image, "Attach an Image" %><br />
+    <%= f.file_field :image %>
+   </p>
   <%= f.submit %>
   </p>
 <% end%>
