--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,11 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
+<% if @article.image.present? %>
+<p><%= image_tag @article.image.url %></p>
+<% end %>
 <p>
 Tags:
-<%= @article.tags.each do |tags| %>
+<%= @article.tags.each do |tag| %>
   <%= link_to tag.name, tag_path(tag) %>
 <% end%>
 </p>
